# minimal_sdl2_pong

./: CMakeLists.txt  main.c
src/: main.c  main.cpp
src/utils/: colors.c  colors.cpp  colors.h  colors.hpp  misc.c  misc.cpp  misc.h  misc.hpp
